# awesome-curator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  update.yml
curator/: __init__.py  __main__.py  checker.py  config.yaml  fetcher.py  generator.py  pdf_exporter.py
curator/templates/: awesome_list.md.j2
output/: AWESOME.md
tests/: __init__.py  conftest.py  test_checker.py  test_fetcher.py  test_generator.py  test_pdf_exporter.py
